# flake2lint

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  __pkginfo__.py  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Source.rst  api.rst  conf.py  contributing.rst  index.rst  license.rst  local_extension.py  requirements.txt  usage.rst
doc-source/_templates/sidebar/: navigation.html
flake2lint/: __init__.py  __main__.py
tests/: conftest.py  requirements.txt  test_flake2lint.py
tests/test_flake2lint_/: test_cli._py_  test_flake2lint._py_
