[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "flake2lint"
version = "0.4.0"
description = "Tool and pre-commit hook to augment Flake8 noqa comments with PyLint comments."
readme = "README.rst"
keywords = [ "flake8", "pylint", "pre-commit",]
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/flake2lint"
"Issue Tracker" = "https://github.com/domdfcoding/flake2lint/issues"
"Source Code" = "https://github.com/domdfcoding/flake2lint"
Documentation = "https://flake2lint.readthedocs.io/en/latest"

[project.scripts]
flake2lint = "flake2lint.__main__:main"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Flake8",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
